--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,8 @@ typer>=0.12.0
 pydantic>=2.7.0
 pydantic-settings>=2.2.0
 rich>=13.7.0
+
+# API dependencies
+fastapi>=0.110.0
+uvicorn[standard]>=0.29.0
+python-multipart>=0.0.9
