feat: add advanced spending forecast chart and year-over-year comparison chart
- Implemented SpendingForecastChart component for visualizing spending forecasts with advanced options.
- Created YearOverYearComparisonChart component for comparing financial data across years.
- Added TimeNavigator and ViewModeToggle components for enhanced chart navigation and view mode selection.
- Introduced reusable hooks (useBuckets, useCategories, useMetaFilters) for fetching and caching data from the backend.
- Established shared constants and utilities for chart components.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "backend": "cd backend && ..\\venv\\Scripts\\python -m uvicorn ledger_sync.api.main:app --reload",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "install:all": "cd frontend && pnpm install",
-    "install:backend": "cd backend && ..\\venv\\Scripts\\pip install -e . && ..\\venv\\Scripts\\pip install -r requirements.txt",
+    "install:backend": "cd backend && ..\\venv\\Scripts\\pip install -e .",
     "setup": "npm run install:all && npm run install:backend",
     "build:frontend": "cd frontend && pnpm run build",
     "start:frontend": "cd frontend && pnpm run preview",
