feat: add IncomeExpenseFlowPage and integrate into main index
- Created IncomeExpenseFlowPage component for visualizing income and expense flow using a Sankey diagram.
- Added API call to fetch transactions and filter them by financial year.
- Implemented summary cards for total income, total expense, net savings, and savings rate.
- Updated package.json to streamline setup scripts for backend and frontend.
- Integrated IncomeExpenseFlowPage into the main index file for routing.

--- a/package.json
+++ b/package.json
@@ -3,33 +3,15 @@
   "version": "1.0.0",
   "description": "Production-ready data ingestion and reconciliation engine with modern web interface",
   "scripts": {
+    "setup": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run setup:backend\" \"pnpm run setup:frontend\"",
+    "setup:backend": "cd backend && python -m venv ..\\venv && ..\\venv\\Scripts\\python -m pip install -e .",
+    "setup:frontend": "cd frontend && pnpm install",
     "dev": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run dev:backend\" \"pnpm run dev:frontend\"",
     "dev:backend": "cd backend && ..\\venv\\Scripts\\python -m uvicorn ledger_sync.api.main:app --reload --port 8000",
     "dev:frontend": "cd frontend && pnpm run dev",
-    "setup": "pnpm run install:frontend",
-    "install": "pnpm run install:frontend",
-    "install:frontend": "cd frontend && pnpm install",
-    "build": "pnpm run build:frontend",
-    "build:frontend": "cd frontend && pnpm run build",
-    "preview": "pnpm run start:frontend",
-    "start": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run start:backend\" \"pnpm run start:frontend\"",
-    "start:backend": "cd backend && ..\\venv\\Scripts\\python -m uvicorn ledger_sync.api.main:app --host 0.0.0.0 --port 8000",
-    "start:frontend": "cd frontend && pnpm run preview",
-    "lint": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run lint:backend\" \"pnpm run lint:frontend\"",
-    "lint:backend": "cd backend && ..\\venv\\Scripts\\python -m ruff check src/ tests/",
-    "lint:frontend": "cd frontend && pnpm run lint",
     "format": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run format:backend\" \"pnpm run format:frontend\"",
     "format:backend": "cd backend && ..\\venv\\Scripts\\python -m black src/ tests/ && ..\\venv\\Scripts\\python -m ruff check --fix src/ tests/",
-    "format:frontend": "cd frontend && pnpm run format",
-    "type-check": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run type-check:backend\" \"pnpm run type-check:frontend\"",
-    "type-check:backend": "cd backend && (..\\venv\\Scripts\\python -m mypy src/ 2>nul || echo \"mypy not installed, skipping backend type check\")",
-    "type-check:frontend": "cd frontend && pnpm run type-check",
-    "test": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run test:backend\" \"pnpm run test:frontend\"",
-    "test:backend": "cd backend && ..\\venv\\Scripts\\python -m pytest -v",
-    "test:frontend": "cd frontend && pnpm run test",
-    "clean": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run clean:backend\" \"pnpm run clean:frontend\"",
-    "clean:backend": "cd backend && ..\\venv\\Scripts\\python -c \"import shutil; import os; [shutil.rmtree(p, ignore_errors=True) for p in ['__pycache__', '.pytest_cache', '.mypy_cache', 'dist', 'build', '*.egg-info']]\"",
-    "clean:frontend": "cd frontend && pnpm run clean"
+    "format:frontend": "cd frontend && pnpm run format"
   },
   "devDependencies": {
     "concurrently": "^9.1.0"
