--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,9 @@ typer = "^0.12.0"
 pydantic = "^2.7.0"
 pydantic-settings = "^2.2.0"
 rich = "^13.7.0"
+fastapi = "^0.115.0"
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
+python-multipart = "^0.0.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.0"
