--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -61,7 +61,7 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = "-v --cov=src/ledger_sync --cov-report=term-missing"
+addopts = "-v"
 
 [build-system]
 requires = ["poetry-core"]
