feat: Enhance Tax Planning and Trends Forecasts pages with user preferences integration
- Updated TaxPlanningPage to utilize user preferences for fiscal year start month and income categories.
- Improved income classification in TaxPlanningPage using preferences-based categories.
- Refactored TrendsForecastsPage to include EmptyState component for better user experience when no data is available.
- Introduced analyticsV2 API service for accessing new pre-calculated analytics data.
- Added preferences API service for managing user preferences related to fiscal year, income sources, and display settings.
- Created Zustand store for managing user preferences synchronously across the app.
- Updated package.json to improve backend development server command.
- Removed outdated setup and start PowerShell scripts.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "setup:backend": "cd backend && python -m pip install -e .[dev]",
     "setup:frontend": "cd frontend && pnpm install",
     "dev": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run dev:backend\" \"pnpm run dev:frontend\"",
-    "dev:backend": "cd backend && python -m uvicorn ledger_sync.api.main:app --reload --port 8000",
+    "dev:backend": "cd backend && python -m uvicorn ledger_sync.api.main:app --reload --reload-dir src --reload-include \"*.py\" --port 8000",
     "dev:frontend": "cd frontend && pnpm run dev",
     "format": "concurrently -n \"backend,frontend\" -c \"bgBlue.bold,bgMagenta.bold\" \"pnpm run format:backend\" \"pnpm run format:frontend\"",
     "format:backend": "cd backend && python -m black src/ tests/ && python -m ruff check --fix src/ tests/",
