feat(auth): implement authentication flow with login, registration, and protected routes
- Add ProtectedRoute component to handle route protection based on authentication state.
- Create useAuth hook for managing authentication operations including login, registration, logout, and user profile updates.
- Develop AuthPage component for user login and registration with form validation and loading states.
- Implement auth API service for handling authentication-related API calls.
- Set up Zustand store for managing authentication state, including user session and JWT tokens.
- Add utility functions for accessing authentication state.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,43 @@
 # Ledger Sync Backend Configuration
 # Copy this file to .env and adjust values as needed
 
+# =============================================================================
+# Environment
+# =============================================================================
+# Options: development, staging, production
+LEDGER_SYNC_ENVIRONMENT=development
+
+# =============================================================================
 # Database Configuration
+# =============================================================================
+# For development (SQLite):
 LEDGER_SYNC_DATABASE_URL=sqlite:///./ledger_sync.db
+
+# For production (PostgreSQL recommended):
+# LEDGER_SYNC_DATABASE_URL=postgresql://user:password@localhost:5432/ledger_sync
+
+# Enable SQL query logging (disable in production)
 LEDGER_SYNC_DATABASE_ECHO=false
 
+# =============================================================================
+# JWT Authentication (CRITICAL - Change for production!)
+# =============================================================================
+# Generate a secure secret: python -c "import secrets; print(secrets.token_urlsafe(64))"
+# WARNING: The default value is for development only!
+LEDGER_SYNC_JWT_SECRET_KEY=your-super-secret-key-at-least-32-characters-long
+
+# Token expiration settings
+LEDGER_SYNC_JWT_ACCESS_TOKEN_EXPIRE_MINUTES=1440
+LEDGER_SYNC_JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# =============================================================================
 # Logging Configuration
+# =============================================================================
+# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LEDGER_SYNC_LOG_LEVEL=INFO
 
-# Data Directory (for temporary files and exports)
+# =============================================================================
+# Data Directory
+# =============================================================================
+# For temporary files and exports
 LEDGER_SYNC_DATA_DIR=./data
