--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,9 @@ fastapi = "^0.115.0"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 python-multipart = "^0.0.9"
 psycopg2-binary = "^2.9.9"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+bcrypt = "^4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.0"
