--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,10 +19,12 @@ rich = "^14.0.0"
 fastapi = "^0.128.0"
 uvicorn = {extras = ["standard"], version = "^0.40.0"}
 python-multipart = "^0.0.22"
-psycopg2-binary = "^2.9.9"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 bcrypt = "^4.0.1"
+psycopg2-binary = {version = "^2.9.9", optional = true}
+
+[tool.poetry.extras]
+postgres = ["psycopg2-binary"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.0"
@@ -38,11 +40,11 @@ ledger-sync = "ledger_sync.cli.main:app"
 
 [tool.black]
 line-length = 100
-target-version = ['py312']
+target-version = ['py311']
 
 [tool.ruff]
 line-length = 100
-target-version = "py312"
+target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
